# flocc

./: README.md
v0.1/: TODO  build.sh  flocc.cabal
v0.1/Compiler/Back/: AllTemplates.hs  Arrays.hs  Back.hs  CartTopology.hs  ControlTemplates.hs  FromFront.hs  FromFront2.hs  Gen.hs  GenDecls.hs  Generators.hs  Graph.hs  GraphBuilder.hs  GraphInterpretter.hs  Helper.hs  ScalTemplates.hs  ShowGraph.hs  StrTemplates.hs  Templates.hs  TypeNames.hs  Vars.hs
v0.1/Compiler/Back/Maps/: HTemplates.hs  STemplates.hs  TTemplates.hs  VTemplates.hs
v0.1/Compiler/Front/: Common.hs  ExprTree.hs  Front.hs  Indices.hs  Preprocess.hs  SrcLexer.hs  SrcLexer.x  SrcParser.hs  SrcParser.y
v0.1/Compiler/Planner/: InsertCasts.hs  RuleLexer.hs  RuleLexer.x  RuleParser.hs  RuleParser.y  Rules.hs  SearchCache.hs  Searches.hs  SolExec.hs  Solutions.hs
v0.1/Compiler/Tests/: *.hs
v0.1/Compiler/Tests/BackEnd1/: FunSynthesis.hs  HistTemplates.hs  NodeLayouts.hs  Run.hs  histMain.cpp  lib1.types  mpiLib.cpp  program1.flocc
v0.1/Compiler/Tests/BackEnd2/: ArrTemplates.hs  Run.hs  lib1.types  program1.flocc
v0.1/Compiler/Tests/Casts/: Run.hs  footer.cpp  header.h  library.flocc  mandel1.flocc  program1.flocc  program2.flocc  program3.flocc  program4.flocc  program5.flocc  program5a.expr  program5b.expr  ruleset.txt  types.txt
v0.1/Compiler/Tests/DotP/: Run.hs  Templates.hs  assert.h  carttops.h  dotProd.flocc  dotp.cpp  global.h  graph.xdot  hashing.h  header.h  lib1.types  lineFit.flocc  main.cpp  pointer.h  reparter.h  stddev.flocc  triEnum.cpp  triEnum.manfixed.cpp  vecmap.h  vecmaps.cpp  vecmaps.h
v0.1/Compiler/Tests/FrontEnd1/: Run.hs  floydEg1.flocc  histogramEgProg.flocc  matmulEgProg.flocc  triangleEnum2.flocc
v0.1/Compiler/Tests/FunEq/: Run.hs  out.txt
v0.1/Compiler/Tests/GraphBuild/: Run.hs
v0.1/Compiler/Tests/PfFb/: Run.hs  Run2.hs  Run3.hs  RunOld.hs  Templates.hs  compile-times.sh  hist.flocc  histMap.flocc  histMap1.flocc  histMap2.flocc  lib1.types  program.preprocessed.flocc  rules1.txt  test1.flocc  time_compile.sh  (+2 more)
v0.1/Compiler/Types/: Builder.hs  DepTypeAssignment.hs  EmbeddedFunctions.hs  FillGaps.hs  Solver.hs  Substitutions.hs  TermBuilder.hs  TermLanguage.hs  TypeAssignment.hs  TypeInfo.hs  TypeLexer.hs  TypeLexer.x  TypeParser.hs  TypeParser.y  Types.hs  Variables.hs
v0.1/Compiler/Types2/: Builder.hs  DepTypeAssignment.hs  EmbeddedFunctions.hs  FillGaps.hs  Substitutions.hs  TermBuilder.hs  TermLanguage.hs  TypeAssignment.hs  TypeInfo.hs  TypeLexer.hs  TypeLexer.x  TypeParser.hs  TypeParser.y  Types.hs  Variables.hs
(+12 files in other folders)
